# Musculoco_il

./: .gitignore  .gitmodules  README.md  TEST_COMMANDS.md  check_all_joints.py  find_policy.py  main.py  original_class.py  plot_opensim.ipynb  print_std.py  pyproject.toml  requirements.txt  setup.py  test_opt.py  test_soft_grf.py
experiments/03_latent_exploration/: experiment.py  launcher_walk.py
experiments/09_gail_smooth/: experiment.py  launcher_walk.py
experiments/10_gail_complex_feet/: experiment.py  launcher_run.py  launcher_walk.py
experiments/11_grf_structure/: experiment.py  launcher_best.py  launcher_run.py  launcher_walk.py
experiments/12_torque_fidelity/: experiment.py  launcher_run.py  launcher_walk.py
experiments/14_AMP_latent/: experiment.py  launcher_run.py  launcher_walk.py
experiments/15_AMP_attention/: experiment.py  launcher_best.py  launcher_run.py  launcher_walk.py
experiments/eval/: analysis_data.ipynb  analyze_contact_forces.py  analyze_gait_bands.py  analyze_gait_torque_bands.py  launcher_walk.py  plot_ascii_reference_bands.py  pol_runner.py  pol_runner_activation.py  record_contact_forces.py  record_joint_torques.py  requirements.txt
musculoco_il/: __init__.py
musculoco_il/algorithms/: AMP.py
musculoco_il/policy/: attention_synergy_torch_policy.py  latent_exploration_torch_policy.py  tcn_attention_synergy_torch_policy.py
musculoco_il/util/: rewards.py
